# ClimateShield

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  package.json.bak  reset_config.py  test-preview.cjs  test-preview.js  test-puppeteer.cjs  vite.config.ts  vitest.config.ts
backend/: .dockerignore  Dockerfile  alembic.ini  auth.py  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/api/: admin.py  donor.py  health.py  weather.py  weather_admin.py  weather_current.py  weather_forecast.py  weather_history.py
backend/migrations/: env.py
backend/migrations/versions/: 13ec0d4a9aed_add_generation_counters.py  20260425_182347_add_forecast_enrichment_columns.py  20260425_add_hko_weather_tables.py  20260514_add_risk_formula_config.py  20260517_add_wbt_score_1_band.py  20260517_update_sensitivity_thresholds.py  3a5f98d91c41_merge_risk_formula_and_counter_reset_.py  3c51a1f1df57_add_hne_columns.py  e93db34a6dca_initial_migration.py  (+1 more)
backend/services/: __init__.py  agent_event_bus.py  audit_logger.py  climate_engine.py  counters.py  health_service.py  hko_client.py  last_refresh.py  open_meteo_client.py  risk_config_service.py  scheduler.py  weather_orchestrator.py  weather_queries.py
backend/tests/: test_api_crs_resilience.py  test_data_integrity.py  test_metrics_endpoint.py  test_pipeline_resilience.py  test_pydantic_risk_config.py  test_rate_limit_active.py  test_risk_config_sensitivity.py  test_score_divergence.py  test_vocabulary.py
(+420 files in other folders)
