[project]
name = "climateshield-backend"
version = "0.1.0"
description = "ClimateShield FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic[email]>=2.12.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.18.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "apscheduler>=3.11.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
]

# FIX: Disable package discovery - this is an application, not a library
[tool.setuptools]
packages = []
py-modules = []
